--- a/document/MainMatter/Introduction.tex
+++ b/document/MainMatter/Introduction.tex
@@ -2,15 +2,15 @@
 \addcontentsline{toc}{chapter}{Introducción}
 
     Desde hace varios años la Inteligencia Artificial (IA) viene revolucionando e \\impactando significativamente en muchas esferas de la 
-vida del hombre. Dentro de la IA hay diversos campos de estudio entre los que se encuentra el Procesamiento de Lenguaje Natural (PLN). Este abarca el conjunto de 
-t\'ecnicas computacionales que tienen como objetivo el trabajo con lenguaje humano, incluyendo desde la extracci\'on de entidades en textos hasta modelos 
+vida del hombre. Dentro de la IA uno de los campos que más actividad tiene es el Procesamiento de Lenguaje Natural (PLN). Este abarca el conjunto de 
+t\'ecnicas computacionales que tienen como objetivo el trabajo con el lenguaje humano, que van desde la extracci\'on de entidades en textos hasta modelos 
 de comprensi\'on y generación de textos. Tanto la generación de texto a texto (\emph{text-to-text}, en inglés) como la generación de 
 datos a texto (D2T por sus siglas en inglés, \emph{data-to-text} ) son instancias de la Generación de Lenguaje Natural (GLN). Reiter y Dale en (~\cite{Reiter1997BuildingAN}), 
 caracterizan la GLN como el subcampo de la IA y la lingüística computacional que se ocupa de la construcción de sistemas informáticos que pueden 
-producir textos comprensibles en inglés u otros idiomas humanos a partir de alguna representación no lingüística subyacente de la información. 
+producir textos comprensibles a partir de alguna representación no lingüística subyacente de la información. 
 Esta definición se adapta fácilmente a los sistemas cuya entrada consiste en datos y es asumida en este trabajo para referirse a los sistemas de GLN. 
     
-    Existe consenso en la forma en que la salida de un sistema de GLN debe presentarse: texto. Sin embargo no hay establecido un est\'andar en cuanto a la forma en 
+    Existe consenso en la forma en que la salida de un sistema de GLN debe presentarse: texto. Sin embargo, no hay establecido un est\'andar en cuanto a la forma en 
 que se presentan los datos para su procesamiento, variando de un sistema a otro (~\cite{reiter_dale_2000,Gatt2018SurveyOT}). Como regla general el texto producido por estos sistemas 
 debe mantener fidelidad a los datos que lo originan y debe ser consecuente con su intención comunicativa (~\cite{reiter_dale_2000}), no siendo lo mismo un 
 sistema para la generación de diálogos que uno que tiene como objetivo describir resúmenes biográficos. Propuestas tempranas de sistemas como Ana (~\cite{kukich1983design}) para 
@@ -18,13 +18,13 @@ generar reportes financieros, o como FoG (~\cite{goldberg1994using}), generador 
 modelos a la hora de dotar de interpretabilidad y relevancia datos que se presentaban de forma repetitiva y tediosa.
   
     En un contexto donde la producción de datos se ha acelerado como resultado de los avances tecnológicos y la digitalización de los sistemas industriales, se ha hecho necesario para 
-las empresas el manejo y la interpretación de los mismos. Por esa raz\'on algunas empresas se han especializado y han comenzado a brindar estos servicios a otras (~\cite{dale2020natural}). Un ejemplo es la compañía 
+las empresas el manejo y la interpretación de los mismos. Por esa raz\'on, algunas empresas se han especializado y han comenzado a brindar estos servicios a otras (~\cite{dale2020natural}). Un ejemplo es la compañía 
 \textit{Automated Insights\footnote[1]{https://automatedinsights.com/}} que ha enfocado su negocio en brindar soluciones a otras corporaciones con vista a automatizar sus 
 procesos de producción de texto. Entre los casos de uso clásico de estas soluciones encontramos, en el marco del comercio electr\'onico, la generación de descripciones de 
 productos a partir de sus fichas técnicas. El periodismo ha sido otra de las esferas beneficiadas de estos avances en la GLN. La generación automática de noticias (conocida como 
 periodismo robótico) está cada vez más extendida, al punto de que importantes editoriales como \textit{The Washington Post} han creado sus propios sistemas para la generación de 
 texto a partir de datos\footnote[2]{https://www.washingtonpost.com/pr/wp/2017/09/01/the-washington-post-leverages-heliograf-to-cover-high-school-football/}. 
-En este caso su sistema se apoda \textit{Heliograf} y les permite cubrir todos los partidos de fútbol americano de las escuelas secundarias del área de Washington DC 
+En este caso, su sistema se apoda \textit{Heliograf} y les permite cubrir todos los partidos de fútbol americano de las escuelas secundarias del área de Washington DC 
 cada semana.
 
     Por su carácter estadístico y su gran audiencia, el deporte es una de las esferas que se puede beneficiar claramente del desarrollo de los sistemas 
@@ -61,11 +61,11 @@ para futuros trabajos que sigan ampliando y profundizando en la GLN.
     La intención de adentrarse en la investigación de los sitemas de GLN dentro del departamento de IA de MATCOM comenzó con la propuesta, en 2019, 
 de realizar un modelo GLN capaz de dar cobertura a las actuaciones destacadas de los peloteros cubanos en las Grandes Ligas de Béisbol. La misma derivó 
 en el trabajo de tesis de Roberto Balboa González (~\cite{balboa2020}). Este primer acercamiento a la GLN sirvió para buscar nuevos escenarios a abarcar 
-desde el punto de vista de esta disciplina. El resto de los antecedentes vienen enmarcados en el estudio de la literatura y de los sistemas existentes dentro del campo de la GLN que 
-se presentan en un capítulo posterior.
+desde el punto de vista de esta disciplina. %El resto de los antecedentes vienen enmarcados en el estudio de la literatura y de los sistemas existentes dentro del campo de la GLN que 
+se presentan en un capítulo posterior.%
 
-A pesar de los avances indiscutibles en el campo de la GLN queda aún mucho por hacer. Se considea que es interesante ampliar los sistemas que den cobertura informativa a los eventos 
-deportivos en idioma español. Además, es motivante crear un diseño que pueda servir dentro del grupo de IA de MATCOM como antesala de futuras investigaciones y aplicaciones.
+A pesar de los avances indiscutibles en el campo de la GLN queda aún mucho por hacer. Se considera que es interesante ampliar los sistemas que den cobertura informativa a los eventos 
+deportivos en idioma español. Además, es motivante crear un diseño de sistema para la generación de resúmenes textuales de enfrentamientos deportivos, que pueda servir dentro del grupo de IA de MATCOM como antesala de futuras investigaciones y aplicaciones.
 
 
 Teniendo en cuenta estos antecedentes, y partiendo de la hipótesis de que es posible definir un esquema general para representar los datos que describen los enfrentamientos deportivos,
